Closed Bug 1770268 Opened 2 years ago Closed 2 years ago

libxul.so: hidden symbol `_ZN2JS4Zone19getOrCreateUniqueIdEPN2js2gc4CellEPm' isn't defined

Categories

(Core :: JavaScript Engine, defect)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox-esr91 --- wontfix
firefox100 --- wontfix
firefox101 --- fixed
firefox102 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

In some corner cases (which happens consistently with clang 14 targeting s390x) the build can fail with:

/builds/worker/fetches/binutils/bin/ld.bfd: /builds/worker/fetches/binutils/bin/ld.bfd: DWARF error: could not find variable specification at offset 52
/builds/worker/fetches/binutils/bin/ld.bfd: DWARF error: could not find variable specification at offset 6676e
../../../js/src/build/libjs_static.a(Unified_cpp_js_src20.o): in function `js::SharedShape::getInitialShape(JSContext*, JSClass const*, JS::Realm*, js::TaggedProto, unsigned long, js::EnumFlags<js::ObjectFlag>)':
/builds/worker/checkouts/gecko/js/src/vm/Shape.cpp:1091: undefined reference to `JS::Zone::getOrCreateUniqueId(js::gc::Cell*, unsigned long*)'
/builds/worker/fetches/binutils/bin/ld.bfd: libxul.so: hidden symbol `_ZN2JS4Zone19getOrCreateUniqueIdEPN2js2gc4CellEPm' isn't defined
/builds/worker/fetches/binutils/bin/ld.bfd: final link failed: bad value

This presumably happens when the function does end up inlined in all its uses, which leaves no non-inlined version of the function around for sources that don't include the inline version.

Set release status flags based on info from the regressing bug 1703481

Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/e65edbe39b68
Add missing Zone-inl.h include in Shape.cpp. r=jandem
Has Regression Range: --- → yes
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch

I'm guessing we'll want to uplift this to Beta & ESR? Please nominate if so.

Flags: needinfo?(mh+mozilla)

ESR91 is probably not worth worrying at this point.

Flags: needinfo?(mh+mozilla)

Comment on attachment 9277382 [details]
Bug 1770268 - Add missing Zone-inl.h include in Shape.cpp.

Beta/Release Uplift Approval Request

  • User impact if declined: Build failure in some cases.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Missing header.
  • String changes made/needed:
  • Is Android affected?: No
Attachment #9277382 - Flags: approval-mozilla-beta?

Comment on attachment 9277382 [details]
Bug 1770268 - Add missing Zone-inl.h include in Shape.cpp.

Approved for 101.0rc2.

Attachment #9277382 - Flags: approval-mozilla-beta? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: