Bug 1770268 - Add missing Zone-inl.h include in Shape.cpp. r=jandem, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D146856